Criando o swagger de acompanhamentos.
